make addForm open and close - fix width overflow issue: NOTE to self: w-screen includes the scrollbar"

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,21 @@ body {
   margin: 0;
   display: flex;
   padding: 0;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
-  background-color: rgb(250, 218, 218);
+  /* background-color: rgb(250, 218, 218); */
+  max-width: 100%;
 }
+
+* {
+  box-sizing: border-box !important;
+  max-width: 100%;
+}
+
+body * {
+  box-sizing: border-box;
+}
+
+/* ::-webkit-scrollbar {
+  display: none;
+} */
